Adding to the project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "event-elegance",
+    "name": "kitoko",
     "version": "1.0.0",
     "description": "A comprehensive event planning and catering service platform",
     "main": "server.js",
